--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3b82f6" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="AI TOY - Where Innovation Meets Imagination. Discover intelligent toys that learn, grow, and play with your child."
     />
+    <meta name="keywords" content="AI toys, intelligent toys, educational toys, smart toys, interactive toys, children, kids, learning, technology" />
+    <meta property="og:title" content="AI TOY - Intelligent Toys for the Future" />
+    <meta property="og:description" content="Where Innovation Meets Imagination. Intelligent toys that grow with your child." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +27,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>AI TOY - Intelligent Toys for the Future</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
